--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set nightly
+      run: rustup default nightly
     - name: Run tests
       run: cargo test --verbose
     - name: Build
